# django-advanced

./: .gitignore  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
sparta/: settings.py  urls.py
sparta/.github/workflows/: lint_by_black.yml
tabom/apis/v1/: article_router.py  like_router.py
tabom/migrations/: 0001_initial.py  0002_like_unique_user_article.py
tabom/models/: article.py  like.py  user.py
tabom/services/: article_service.py  like_service.py
tabom/tests/: test_article_service.py  test_auto_now.py  test_like_services.py
tabom/tests/apis/v1/: test_article_router.py
tabom/tests/services/: test_like_services.py
