[tool.poetry]
name = "django_advanced"
version = "0.1.0"
description = ""
authors = ["about-joo91 <about.joo91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "21.12b0"
Django = "4.0"
django-ninja = "0.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
